--- a/.config/pipewire/pipewire.conf.d/99-input-denoising.conf
+++ b/.config/pipewire/pipewire.conf.d/99-input-denoising.conf
@@ -36,7 +36,7 @@
           aec.args = {
               webrtc.gain_control = true
           }
-          # node.latency = 1024/48000
+          #node.latency = 1024/48000
 
           capture.props = {
              # This is where the raw local microphone signal is really coming from
@@ -54,7 +54,10 @@
              # This is the virtual output device available to applications.
              # It is what the communication application should use to play sound locally.
              node.name = "Echo Cancellation Sink"
-             node.description "Altavoces, no echo"
+             node.description "Speakers, no echo"
+             #default.clock.rate= 48000
+             #default.clock.quantum= 1024
+             #default.clock.quantum-limit = 8192
           }
           playback.props = {
             # This is the local speaker we are really sending the audio to that is coming from the application.
@@ -64,8 +67,9 @@
             node.passive = true
             audio.channels = 2
             audio.position = [ AUX3 AUX2 ]
-            target.object = "alsa_output.pci-0000_0a_00.4.analog-stereo"
+            target.object = "alsa_output.pci-0000_0f_00.6.analog-stereo"
           }
     }
-
+    }
 ]
+
